force-app/main/default/objects/ucinn_ascendv2__Address_Type_Mapping__c/ucinn_ascendv2__Address_Type_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Address Type Mapping</label>
</CustomObject>