force-app/main/default/objects/ucinn_ascendv2__Address_Type_Mapping__c/fields/ucinn_ascendv2__Address_Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Relation_Type__c</fullName>
    <label>Address Relation Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>