force-app/main/default/objects/ucinn_ascendv2__Address_Type_Mapping__c/fields/ucinn_ascendv2__Address_Type_Label_Backend_Message__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Type_Label_Backend_Message__c</fullName>
    <label>Address Type Label Backend Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>