force-app/main/default/objects/ucinn_ascendv2__Address_Type_Mapping__c/fields/ucinn_ascendv2__Object_Address_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Object_Address_Field_Name__c</fullName>
    <label>Object Address Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>